samples/_failures_safe/1761243094_261d6a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_709429d4.c: In function ‘main’:
./samples/SAFE/__tmp_709429d4.c:137:13: error: expected expression at end of input
  137 |             cols1 =
      |             ^~~~~
./samples/SAFE/__tmp_709429d4.c:137:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_709429d4.c:137:13: error: expected declaration or statement at end of input
